--- a/index.html
+++ b/index.html
@@ -20,13 +20,18 @@
         <!-- Buttons For Adding And Database -->
         <div class="add-tick row mt-4 text-center">
             <div class="col-md-5">
-                <button class="btn-outline-danger btn btn-block">Add</button>
+                <button class="btn-outline-danger btn btn-block" id="add-btn">Add</button>
             </div>
             <div class="col-md-5">
-                <button class="btn btn-outline-dark btn-block">Tickets</button>
+                <button class="btn btn-outline-dark btn-block" id="tick-btn">Tickets</button>
             </div>
         </div>
+
         <!-- Input For The Form -->
+
+        <div class="row">
+
+        
         <div class="form-input col-md-5 mt-4">
             <form id="form">
                 <div class="form-group">
@@ -71,7 +76,20 @@
                 <button class="btn btn-danger pl-3 pr-3 btn-lg">Pay</button>
             </form>
         </div>
+        <div class="col-md-5 price-sys mt-4">
+            <h3>Pricing System</h3>
+            <h6 class="mt-3">Normal Ticket : &#8358 3000</h6>
+            <h6 class="mt-3">None-first : &#8358 -200</h6>
+            <h6 class="mt-3">Martinee : &#8358 -200</h6>
+            <h6 class="mt-3">Ages Above 65 : &#8358 -500</h6>
+        </div>
+    </div>
 
+
+        <!-- Tickets Display -->
+        <div class="tickets">
+
+        </div>
     </div>
 </body>
 
