--- a/index.html
+++ b/index.html
@@ -31,64 +31,64 @@
 
         <div class="row">
 
-        
-        <div class="form-input col-md-5 mt-4">
-            <form id="form">
-                <div class="form-group">
-                    <label for="name" class="text-danger"><b>Name :</b></label>
-                    <input type="text" class="form-control" id="name-input">
-                </div>
-                <div class="form-group">
-                    <label for="age" class="text-danger"><b>Age :</b></label>
-                    <input type="number" class="form-control" id="age-input">
-                </div>
-                <div class="form-group">
-                    <label for="movie" class="text-danger"><b>Movie :</b></label>
-                    <select name="movie" id="movie-input" class="form-control">
-                        <option value="select">Select the movie</option>
-                        <option value="spiderman">SpiderMan</option>
-                        <option value="jc">Jungle Cruise</option>
-                        <option value="lk">Lion King</option>
-                        <option value="rn">Red Notice</option>
-                        <option value="ds">Doctor Strange</option>
-                    </select>
-                </div>
-                <div class="form-group">
-                    <label for="time" class="text-danger"><b>Time :</b></label>
-                    <select name="time" id="time-input" class="form-control">
-                        <option>Select The Time</option>
-                        <option>9:30 am</option>
-                        <option>12:30 pm</option>
-                        <option>3:30 pm</option>
-                        <option>7:30 pm</option>
-                    </select>
-                </div>
-                <div class="form-group">
-                    <label for="price">Price</label>
-                    <div class="div">
-                        <span id="price-div">
-                            &#8358 <span id="price-input"></span>
-                        </span>
-                        <span class="btn btn-outline-dark" id="generate">Generate</span>
 
+            <div class="form-input col-md-5 mt-4">
+                <form id="form">
+                    <div class="form-group">
+                        <label for="name" class="text-danger"><b>Name :</b></label>
+                        <input type="text" class="form-control" id="name-input">
                     </div>
-                </div>
-                <button class="btn btn-danger pl-3 pr-3 btn-lg">Pay</button>
-            </form>
+                    <div class="form-group">
+                        <label for="age" class="text-danger"><b>Age :</b></label>
+                        <input type="number" class="form-control" id="age-input">
+                    </div>
+                    <div class="form-group">
+                        <label for="movie" class="text-danger"><b>Movie :</b></label>
+                        <select name="movie" id="movie-input" class="form-control">
+                            <option value="select">Select the movie</option>
+                            <option value="spiderman">SpiderMan</option>
+                            <option value="jungle cruise">Jungle Cruise</option>
+                            <option value="lion king">Lion King</option>
+                            <option value="red notice">Red Notice</option>
+                            <option value="doctor strange">Doctor Strange</option>
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <label for="time" class="text-danger"><b>Time :</b></label>
+                        <select name="time" id="time-input" class="form-control">
+                            <option>Select The Time</option>
+                            <option>9:30 am</option>
+                            <option>12:30 pm</option>
+                            <option>3:30 pm</option>
+                            <option>7:30 pm</option>
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <label for="price">Price</label>
+                        <div class="div">
+                            <span id="price-div">
+                                &#8358 <span id="price-input">0</span>
+                            </span>
+                            <span class="btn btn-outline-dark" id="generate">Generate</span>
+
+                        </div>
+                    </div>
+                    <button class="btn btn-danger pl-3 pr-3 btn-lg">Pay</button>
+                </form>
+            </div>
+            <div class="col-md-5 price-sys mt-4">
+                <h3>Pricing System</h3>
+                <h6 class="mt-3">Normal Ticket : &#8358 3000</h6>
+                <h6 class="mt-3">None-first : &#8358 -200</h6>
+                <h6 class="mt-3">Martinee : &#8358 -200</h6>
+                <h6 class="mt-3">Ages Above 65 : &#8358 -500</h6>
+            </div>
         </div>
-        <div class="col-md-5 price-sys mt-4">
-            <h3>Pricing System</h3>
-            <h6 class="mt-3">Normal Ticket : &#8358 3000</h6>
-            <h6 class="mt-3">None-first : &#8358 -200</h6>
-            <h6 class="mt-3">Martinee : &#8358 -200</h6>
-            <h6 class="mt-3">Ages Above 65 : &#8358 -500</h6>
-        </div>
-    </div>
 
 
         <!-- Tickets Display -->
         <div class="tickets">
-
+            <ul id="tickets-display"></ul>
         </div>
     </div>
 </body>
