Create the listener click for the lists

--- a/index.html
+++ b/index.html
@@ -89,6 +89,17 @@
         <!-- Tickets Display -->
         <div class="tickets">
             <ul id="tickets-display"></ul>
+
+            <!-- Display The Full Details -->
+            <div class="display">
+                <p>Name : <span id="name-display"></span></p>
+                <p>Age : <span id="age-display"></span></p>
+                <p>Movie : <span id="movie-display"></span></p>
+                <p>Price : <span id="price-display"></span></p>
+                <div id="delete-btn-div">
+                    
+                </div>
+            </div>
         </div>
     </div>
 </body>
